--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@
 
 # Ignore Byebug command history file.
 .byebug_history
-
+/public/assets
 # Ignore application configuration
 /config/application.yml
 
